--- a/home.html
+++ b/home.html
@@ -6,10 +6,15 @@
     <title>{{ name }}</title>
 </head>
 <body>
-  <div id="gallery">
-    <h2>{% for dir in path %}{{ dir }}<span class = "accent">·</span>{% endfor %}<span class = "main_directory">{{ name }}</span></h2>
-    <div class="content">{% for item in files %}
-        <div class = "image"><a href = "{{ item }}"><img class = "img" src = "{{ item }}" alt = "{{ item }}" /></a></div>{% endfor %}
-  </div>
+    <div class = "main">
+      <h2>{% for dir, link in path %}<a href = "{{ link }}" class = "accent">{{ dir }}</a>·{% endfor %}<span class = "main_directory">{{ name }}</span></h2>
+      <h3>{% for sub, link in subs %}<span class = ".accent ">//</span><a href = "{{ link }}" class = "subs">{{ sub }}</a>  {% endfor %}</h3>
+      <div id="gallery">
+        <div class="content">{% for item in files %}
+          <div class = "image"><a href = "{{ item }}"><img class = "img" src = "{{ item }}" alt = "{{ item }}" /></a></div>{% endfor %}
+        </div>
+      </div>
+    </div>
+
 </body>
 </html>
