--- a/home.html
+++ b/home.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="/home/nemecle/transit/ne_art/pythim/export/main.css"/>
+  <link rel="stylesheet" href="main.css"/>
   <meta charset="UTF-8">
     <title>{{ name }}</title>
 </head>
 <body>
     <div class = "main">
-      <h2>{% for dir, link in path %}<a href = "{{ link }}" class = "accent">{{ dir }}</a>·{% endfor %}<span class = "main_directory">{{ name }}</span></h2>
-      <h3>{% for sub, link in subs %}<span class = ".accent ">//</span><a href = "{{ link }}" class = "subs">{{ sub }}</a>  {% endfor %}</h3>
+      <h2><a href = "All.html" class = "accent">All</a>·{% for dir, link in path %}<a href = "{{ link }}" class = "accent">{{ dir }}</a>·{% endfor %}<span class = "main_directory">{{ name }}</span></h2>
+      <h3> {% for sub, link in subs %}<span class = ".accent ">/</span><a href = "{{ link }}" class = "subs">{{ sub }}</a>  {% endfor %}</h3>
+      <div class = "desc">{{ description }}</div>
       <div id="gallery">
-        <div class="content">{% for item in files %}
-          <div class = "image"><a href = "{{ item }}"><img class = "img" src = "{{ item }}" alt = "{{ item }}" /></a></div>{% endfor %}
+        <div class="content">{% for thumb, im in files %}
+          <div class = "image"><a href = "{{ im }}"><img class = "img" src = "{{ thumb }}" alt = "{{ item }}" /></a></div>{% endfor %}
         </div>
       </div>
     </div>
