--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class = "main">
-      <h2><a href = "All.html" class = "accent">All</a>·{% for dir, link in path %}<a href = "{{ link }}" class = "accent">{{ dir }}</a>·{% endfor %}<span class = "main_directory">{{ name }}</span></h2>
+      <h2><a href = "all.html" class = "accent">All</a>·{% for dir, link in path %}<a href = "{{ link }}" class = "accent">{{ dir }}</a>·{% endfor %}<span class = "main_directory">{{ name }}</span></h2>
       <h3> {% for sub, link in subs %}<span class = ".accent ">/</span><a href = "{{ link }}" class = "subs">{{ sub }}</a>  {% endfor %}</h3>
       <div class = "desc">{{ description }}</div>
       <div id="gallery">
